# llm_graphql_poc

./: .env  README.md  docker-compose.yml  pyproject.toml
src/dab_clone/: main.py
src/dab_clone/src/: auth.py  db_handlers.py  errors.py  graphql.py  graphql2.py
src/data_publisher/: main.py
src/llm_agent/: graphana_sql.py  main.py
